fixing css style on mobile viewport

--- a/src/components/Aside/Aside.scss
+++ b/src/components/Aside/Aside.scss
@@ -11,7 +11,8 @@
 	grid-area: aside;
 
 	@include tablet {
-		padding: 1rem 1.5rem 1.5rem;
+		// padding: 1rem 1.5rem 1.5rem;
+		padding: 1rem;
 	}
 
 	&__title {
