--- a/src/components/Card/Card.scss
+++ b/src/components/Card/Card.scss
@@ -18,7 +18,7 @@
 	}
 
 	@include tablet {
-		margin: 1rem 0;
+		margin: 1rem 0 0.3rem;
 	}
 
 	&__value {
