--- a/src/components/SortByDropDown/SortByDropDown.scss
+++ b/src/components/SortByDropDown/SortByDropDown.scss
@@ -5,7 +5,7 @@
 .options-dropdown {
 	align-items: flex-start;
 	display: flex;
-	margin: 0.7rem 0 1rem;
+	margin: 0rem 0 0.5rem;
 	justify-content: space-between;
 	background-color: $color-sorting;
 	// background-color: #8a8ba6;
@@ -23,7 +23,7 @@
 	}
 
 	@include tablet {
-		margin: 0 0 0;
+		margin: 0 0 -0.5rem;
 	}
 
 	&__label {
